Change layout partial to view component

--- a/K_Bridge/Views/Shared/Components/AdminNavigationMenu/Default.cshtml
+++ b/K_Bridge/Views/Shared/Components/AdminNavigationMenu/Default.cshtml
@@ -52,6 +52,12 @@
     </li>
     <li class="nav-item mt-2">
         <a class="nav-link nav-link-text" href="#">
+            <img src="~/img/icon_admin_50.png" class="sidebar-icon" /> Quản trị viên
+        </a>
+    </li>
+
+    <li class="nav-item mt-2">
+        <a class="nav-link nav-link-text" href="#">
             <img src="~/img/icon_logout_50.png" class="sidebar-icon" /> Đăng xuất
         </a>
     </li>
