--- a/K_Bridge/Pages/_AdminLayout.cshtml
+++ b/K_Bridge/Pages/_AdminLayout.cshtml
@@ -57,36 +57,40 @@
 
 
 <body>
-    <header id="header-container">
-        <div class="row d-flex align-items-center">
-
-            <div class="col-1 d-flex justify-content-end">
-                <img src="/img/Logo_75.png" class="img-fluid" alt="Logo" width="50" height="50">
-            </div>
-            <div class="col-2 p-0">
-                <img src="/img/logo_name.png" class="img-fluid" alt="Name" width="100" height="100">
-            </div>
-            <div class="col-7"> </div>
-            <div class="col-1 d-flex p-0">
-                <div class="notification-icon" style="margin-right:30px;">
-                    <img src="/img/notification50.png" class="img-fluid" alt="Name" width="25" height="25">
-                    <span class="notification-badge">1</span>
+    @* Dùng vh-100 d-flex flex-column để bao toàn bộ nội dung *@
+    <div class="vh-100 d-flex flex-column"> 
+        <div id="header-container">
+            <div class="row align-items-center w-100 mr-0">
+                <div class="col-1 d-flex justify-content-end">
+                    <img src="/img/Logo_75.png" class="img-fluid" alt="Logo" width="50" height="50">
                 </div>
-                <img src="/img/user.jpg" class="avatar" alt="Avatar">
-            </div>
-            <div class="col-1 username">
-                Admin
+                <div class="col-2 p-0">
+                    <img src="/img/logo_name.png" class="img-fluid" alt="Name" width="100" height="100">
+                </div>
+                <div class="col-7"> </div>
+                <div class="col-1 d-flex p-0">
+                    <div class="notification-icon" style="margin-right:30px;">
+                        <img src="/img/notification50.png" class="img-fluid" alt="Name" width="25" height="25">
+                        <span class="notification-badge">1</span>
+                    </div>
+                    <img src="/img/user.jpg" class="avatar" alt="Avatar">
+                </div>
+                <div class="col-1 username">
+                    Admin
+                </div>
             </div>
         </div>
-    </header>
-        <div class="row m-0 p-0">
+        @* Dùng flex-grow-1 để fill phần còn lại sau header *@
+        <div class="row m-0 p-0 flex-grow-1">
             <nav class="col-2 sidebar m-0 p-0">
                 <vc:admin-navigation-menu />
             </nav>
-        <div class="col-10" id="admin-background">
+            <div class="col-10 m-0 p-0" id="admin-background">
                 @RenderBody()
             </div>
         </div>
+
+    </div>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
