Create post controller

--- a/K_Bridge/Views/Newest/Index.cshtml
+++ b/K_Bridge/Views/Newest/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using K_Bridge.Models
 @{
-    ViewData["Title"] = "Bài đăng mới nhất";
+    ViewData["Title"] = "Bài viết mới nhất";
     <link href="/css/Newest.css" rel="stylesheet" />
 }
 <div class="row mb-5">
@@ -11,7 +11,7 @@
         <div class="px-2">
             Diễn đàn
         </div>
-        <img src="/img/icon_filter_forum_50.png" alt="Filter" width="20" height="20">
+        <img src="/img/icon_filter_forum_50.png" alt="Filter" width="15" height="15">
     </button>
     <button class="col-3 filter-forum d-flex justify-content-center align-items-center mx-2">
         <div class="px-2">
@@ -56,7 +56,6 @@
             <img src="/img/user.jpg" class="rounded-circle" alt="Avatar" width="30" height="30">
             <div class="newest-card-username mx-2">User1 hỏi 10 phút trước</div>
         </div>
-
     </div>
     <hr class="mt-2">
 </div>
