--- a/K_Bridge/Views/Shared/LayoutHeader.cshtml
+++ b/K_Bridge/Views/Shared/LayoutHeader.cshtml
@@ -22,7 +22,8 @@
             @if (!isLoggedIn)
             {
                 <div class="align-items-center d-flex justify-content-between" style="width: 85%; max-width:300px;">
-                    <button type="button" class="btn px-2 px-md-4 py-1 btn-account-sign" style="width:48%;" data-bs-toggle="modal" data-bs-target="#signupModal">Đăng ký</button>
+                    <button type="button" class="btn px-2 px-md-4 py-1 btn-account-sign" 
+                    style="width:48%;" data-bs-toggle="modal" data-bs-target="#signupModal">Đăng ký</button>
                     <button type="button" class="btn px-2 px-md-4 py-1 btn-account-log" style="width:48%;" data-bs-toggle="modal" data-bs-target="#loginModal">Đăng nhập</button>
                 </div>
             }
